test: ensure list decoration is correct on mobile view

--- a/styling.css
+++ b/styling.css
@@ -306,7 +306,6 @@
     
     .timeline ul {
         list-style-image: url(img/bullet-point/3d.png);
-        padding: 0;
         margin: 0;
     }
     
